# test-proj

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  README_updated.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md
.github/workflows/: ci-cd.yml
app/: analytics.py  attack_parser.py  auth.py  cache.py  cwe_parser.py  main.py  models.py  security.py
app/static/: 404.html  attack.html  attack.js  auth.js  common.js  cve.html  cve.js  cwe.html  cwe.js  dashboard.js  index.html  login.html  search.html  search.js  style.css
argocd/: application.yaml  certificate.yaml  clusterissuer.yaml  ingressroute.yaml  istio-mesh-application.yaml  kiali-application.yaml  openobserve-application.yaml  project.yaml
backend/: attack_parser.py  cache.py  cwe_parser.py  main.py  metrics.py  nvd_client.py
docs/: REPORT.md  kubernetes-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
helm/: external-dns-values.yaml
helm/istio-mesh/: Chart.yaml  values.yaml
helm/kiali/: Chart.yaml  values.yaml
helm/openobserve/: Chart.yaml  values.yaml
helm/puresecure/: Chart.yaml  values.yaml
k8s/: ingress.yaml  namespace.yaml  setup.sh
k8s/aks/: setup.sh
k8s/app/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
locust/: locustfile.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_analytics.py  test_auth.py  test_cache.py  test_cwe_parser.py  test_main.py  test_nvd_client.py  test_security.py
(+100 files in other folders)
