[project]
name = "puresecure-cwe-explorer"
version = "2.0.0"
description = "CWE Weakness Database - PureSecure"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = []

[tool.flake8]
max-line-length = 100
exclude = ["venv", ".git", "__pycache__", "_site"]
